# ynb

./: .gitignore  .prettierrc.json  .snyk  .swcrc  .vercel-trigger  .vercelignore  ABRIR_AHORA.md  ALTERNATIVA_SIN_WSL.md  ARCHITECTURE.md  ARCHIVOS_CREADOS_INTEGRACION.md  BUILD_SUCCESS_SUMMARY.md  CHECKLIST_DEPLOYMENT.md  CHECKLIST_DEPLOY_RAPIDO.md  COMANDOS_WSL_MANUAL.md  COMMIT_EXITOSO.md  CONECTAR_FRONTEND_GUIA.md  CONSOLIDATION_DONE.md  CONTRIBUTING.md  DEMO.md  DEPLOYMENT.md  DEPLOYMENT_SUCCESS.md  DEPLOY_CHROME_FIREFOX.md  DEPLOY_INSTRUCTIONS.md  DEPLOY_MANUAL_PASO_A_PASO.md  DEPLOY_PLAN_B_LOCAL.md  DEPLOY_WEB3_GUIDE.md  DIAGNOSTICO_WALLET_BUTTON.md  Dockerfile  EMPIEZA_AQUI.md  ESTADO_PROYECTO_HACKATHON.md  FIXES_APPLIED.md  FIX_DEFINITIVO_VERCEL.md  FIX_PROGRAM_ID_PLAYGROUND.md  GUIA_INTERACCION_DEVNET.md  GUIA_SOLANA_PLAYGROUND_DEPLOY.md  INSTALACION_EN_PROGRESO.md  INSTALACION_SIMPLE_WSL.md  INSTALAR_SOLANA_TOOLS_SIMPLE.md  INSTALLATION_COMPLETE.md  INSTALLATION_STATUS.md  (+79 more)
.github/: dependabot.yml
prediction-market-latam/programs/prediction-market/: Cargo.toml
prediction-market-latam/programs/prediction-market/src/: error.rs  lib.rs  state.rs  utils.rs
prediction-market-latam/programs/prediction-market/src/instructions/: add_liquidity.rs  claim_winnings.rs  create_market.rs  create_meta_prediction.rs  emergency_pause_market.rs  initialize.rs  mod.rs  place_prediction.rs  remove_liquidity.rs  report_content.rs  resolve_market_with_oracle.rs  sell_position.rs  submit_evidence.rs  update_reputation.rs  verify_human_identity.rs  vote_on_eligibility.rs
(+226 files in other folders)
